# Context-Optimization-Engine

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-benchmark.txt  requirements-core.txt  requirements-http.txt  requirements-mcp.txt  requirements.txt  run.py
.github/workflows/: README.md  benchmark-nightly.yml  benchmark.yml
data/benchmarks/: README.md
data/examples/: README.md  acme_rag_en.json  code_blocks.json  glossary_block.json  http_optimize_rag.json  level1_acme.json  mcp_optimize_rag.json  n5_session_turn2.json  structured_block.json
docs/: Context Optimization Engine (COE).md  FAQ.md  STATUS.md  architecture.md  benchmark-harness.md  benchmark-ollama.md  benchmark-results.md  benchmarks.md  cir-v1-draft.md  cir-v1.md  execution-plan.md  getting-started.md  i18n.md  ingest.md  l0-ingest.md  level1.md  level2.md  level3.md  level4.md  level5.md  levels.md  renderer.md  review-checklist.md  spec-gaps.md  vision.md
tests/: test_benchmark_e2e.py  test_benchmark_h5.py  test_benchmark_harness.py  test_benchmark_schema.py  test_benchmark_scorers.py  test_budget.py  test_cir.py  test_entity_linking.py  test_gateway.py  test_http_api.py  test_ingest.py  test_ingest_phase18.py  test_l0.py  test_level1.py  test_level2.py  test_level3.py  test_level4.py  test_level5.py  test_level5_operations.py  test_level5_production.py  test_level5_sqlite_store.py  test_level5_store.py  test_locales_zh.py  test_mcp.py  test_model_adapter.py  test_packaging.py  test_pcm_compose.py  test_renderer.py  test_run_demo.py  test_savings_report.py
(+151 files in other folders)
