[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "context-optimization-engine"
version = "1.0.2"
description = "Context optimization for LLM pipelines (RAG, agents, tools)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "langdetect>=1.0.9",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
http = ["fastapi>=0.115", "uvicorn>=0.32"]
dev = ["pytest>=8.0"]
all = ["context-optimization-engine[mcp,http,dev]"]

[project.scripts]
coe-demo = "coe.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
